---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"select n from generate_series(1, 1000) pos(n) limit 100 offset 990\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+------+
| n    |
+------+
| 991  |
| 992  |
| 993  |
| 994  |
| 995  |
| 996  |
| 997  |
| 998  |
| 999  |
| 1000 |
+------+
